--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div id="marker"></div>
         <div id="element-preview"></div>
       <script type="module">
-          import initDesigner from "./udesigner.js";
+          import initDesigner from "./unide.js";
           initDesigner();
       </script>
   </body>
