--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     height: 100vh;
     overflow-y: auto;
     padding: 1em;
-    border-right: 1px solid black;
+    border-right: 1px solid gray;
   }
   #outline {
     width: 100%;
@@ -53,7 +53,7 @@
     width: 100%;
     height: 50%;
     border: none;
-    border-top: 1px solid black;
+    border-top: 1px solid gray;
     width: 15vw;
     background-color: #223;
     color: white;
@@ -88,6 +88,7 @@
     height: 1rem;
     padding: 2px;
     padding-left: 15vw;
+    border-bottom: 1px solid gray;
 
   }
 
@@ -116,6 +117,8 @@
           <option>Vue</option>
         </select>
         <button id="export-design">Export</button>
+        <input type="file" id="import-file-input"></input>
+        <button id="import-file">Import Raw</button>
       </span>
       <div id="container">
         <div id="paper">paper</div>
