--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     display: grid;
     grid-template-columns: auto 15vw 15vw;
     width: 100%;
-    height: calc(100% - 1rem);
+    height: calc(100% - 2rem);
   }
   #paper {
     box-sizing: border-box;
@@ -39,6 +39,7 @@
     padding: 1em;
     border-right: 1px solid gray;
   }
+
   #outline {
     width: 100%;
     height: 50%;
@@ -86,10 +87,6 @@
 
   #design-details {
     height: 1rem;
-    padding: 2px;
-    padding-left: 15vw;
-    border-bottom: 1px solid gray;
-
   }
 
   </style>
@@ -98,27 +95,38 @@
       <div id="marker"></div>
       <div id="element-preview"></div>
       <span id="design-details">
-        Design name
-        <input id="design-name" type="text"></input>
-        <button id="save-design">Save Design</button>
-        <select id="choose-design">
-        </select>
-        <select id="choose-export-format">
-          <option>Choose export format</option>
-          <option>Angular</option>
-          <option>Flow</option>
-          <option>LitElement</option>
-          <option>Preact</option>
-          <option>Raw</option>
-          <option>React</option>
-          <option>Svelte</option>
-          <option>VanillaJS</option>
-          <option>Vaadin on Kotlin</option>
-          <option>Vue</option>
-        </select>
-        <button id="export-design">Export</button>
-        <input type="file" id="import-file-input"></input>
-        <button id="import-file">Import Raw</button>
+        <span>
+          Design name:
+          <input id="design-name" type="text"></input>
+          <button id="save-design">Save Design</button>
+        </span>
+        <span>
+          Load:
+          <select id="choose-design">
+          </select>
+        </span>
+        <span>
+          Export:
+          <select id="choose-export-format">
+            <option>Choose export format</option>
+            <option>Angular</option>
+            <option>Flow</option>
+            <option>LitElement</option>
+            <option>Preact</option>
+            <option>Raw</option>
+            <option>React</option>
+            <option>Svelte</option>
+            <option>VanillaJS</option>
+            <option>Vaadin on Kotlin</option>
+            <option>Vue</option>
+          </select>
+          <button id="export-design">Export</button>
+        </span>
+        <span>
+          Import:
+          <input type="file" id="import-file-input"></input>
+          <button id="import-file">Import Raw</button>
+        </span>
       </span>
       <div id="container">
         <div id="paper">paper</div>
