--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>UniDe - Universal Desiger</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="images/unide.png" sizes="256x256">
+  <script src="./node_modules/prettier/standalone.js"></script>
   <script src="./node_modules/jszip/dist/jszip.js"></script>
   <script src="./node_modules/file-saver/dist/FileSaver.js"></script>
 
@@ -38,12 +39,14 @@
     overflow-y: auto;
     padding: 1em;
     border-right: 1px solid gray;
+    border-top: 1px solid gray;
   }
 
   #outline {
     width: 100%;
     height: 50%;
     width: 15vw;
+    border-top: 1px solid gray;
   }
 
   #outline div {
@@ -59,12 +62,14 @@
     background-color: #223;
     color: white;
   }
+
   #marker {
     display: none;
     position: absolute;
     border: 1px solid red;
     z-index: 10000;
   }
+
   #element-preview {
     display: none;
     position: absolute;
