#18 First implemenation of adapter that allows setting column captions from property

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div>
           <div id="outline">outline</div>
-          <textarea id="attributes">attributes</textarea>
+          <textarea id="attributes" wrap="soft">attributes</textarea>
           </div>
       </div>
       <script type="module">
