--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   <title>UniDe - Universal Desiger</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="images/unide.png" sizes="256x256">
+  <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
+  <link rel="stylesheet" href="./node_modules/codemirror/theme/tomorrow-night-eighties.css">
   <script src="./node_modules/prettier/standalone.js"></script>
   <script src="./node_modules/jszip/dist/jszip.js"></script>
   <script src="./node_modules/file-saver/dist/FileSaver.js"></script>
-
+  <script src="./node_modules/codemirror/lib/codemirror.js"></script>
+  <script src="./node_modules/codemirror/mode/css/css.js"></script>
+  <script src="./node_modules/codemirror/addon/hint/show-hint.js"></script>
+  <script src="./node_modules/codemirror/addon/hint/css-hint.js"></script>
+  
   <style>
   body {
     width: 100%;
@@ -21,7 +27,7 @@
   }
   #container {
     display: grid;
-    grid-template-columns: auto 15vw 15vw;
+    grid-template-columns: 15vw auto 15vw 15vw;
     width: 100%;
     height: calc(100% - 2rem);
   }
@@ -90,6 +96,11 @@
       color: white;
   }
 
+  #text-editor {
+    height: 100%;
+  }
+  .CodeMirror { height: 100%; }
+
   #design-details {
     height: 1rem;
   }
@@ -134,6 +145,7 @@
         </span>
       </span>
       <div id="container">
+        <div id="text-editor"></div>
         <div id="paper">paper</div>
         <div>
             <div id="palette">&nbsp;</div>
