#19 Support for routes to Flow exporter

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
       <div id="marker"></div>
       <div id="element-preview"></div>
       <span id="design-details">
+        <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
+        |
         <span>
           Design name:
           <input id="design-name" type="text"></input>
