#2 Extract model operations to model.js, move sources to src folder

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
       </div>
       <script type="module">
-          import initDesigner from "./unide.js";
+          import initDesigner from "./src/unide.js";
           initDesigner();
       </script>
   </body>
