#15 Use CSS with Vanilla JS components

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: #888;
+    background-color: white;
+    color:black;
   }
 
   #palette {
