#20 Add markers to outline and paper for selection

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
   <script src="./node_modules/codemirror/mode/css/css.js"></script>
   <script src="./node_modules/codemirror/addon/hint/show-hint.js"></script>
   <script src="./node_modules/codemirror/addon/hint/css-hint.js"></script>
+
+  <script src="./node_modules/@vaadin/vaadin-lumo-styles/color.js" type="module"></script>
+  <script src="./node_modules/@vaadin/vaadin-lumo-styles/sizing.js" type="module"></script>
+  <script src="./node_modules/@vaadin/vaadin-lumo-styles/spacing.js" type="module"></script>
+  <script src="./node_modules/@vaadin/vaadin-lumo-styles/style.js" type="module"></script>
+  <script src="./node_modules/@vaadin/vaadin-lumo-styles/typography.js" type="module"></script>
   
   <style>
   body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #223;
     color: white;
     overflow: hidden;
@@ -29,8 +35,8 @@
   #container {
     display: grid;
     grid-template-columns: 15vw auto 15vw 15vw;
-    width: 100%;
-    height: calc(100% - 2rem);
+    width: 100vw;
+    height: calc(100vh - 2rem);
   }
   #paper {
     box-sizing: border-box;
@@ -44,7 +50,7 @@
 
   #palette {
    /* width: 100%; */
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
     padding: 1em;
     border-right: 1px solid gray;
@@ -83,6 +89,15 @@
     z-index: 10000;
   }
 
+  #select-marker-outline, #select-marker-paper {
+    display: none;
+    position: absolute;
+    border: 1px solid green;
+    z-index: 10000;
+    pointer-events: none;
+  }
+
+
   #element-preview {
     display: none;
     position: absolute;
@@ -115,13 +130,15 @@
   .CodeMirror { height: 100%; }
 
   #design-details {
-    height: 1rem;
+    height: 2rem;
   }
 
   </style>
 </head>
   <body>
       <div id="marker"></div>
+      <div id="select-marker-outline"></div>
+      <div id="select-marker-paper"></div>
       <div id="element-preview"></div>
       <span id="design-details">
         <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
@@ -166,7 +183,7 @@
           <div id="text-editor"></div>
           <div id="css-rules"></div>
         </div>
-        <div id="paper">paper</div>
+        <div id="paper" theme="dark">paper</div>
         <div>
             <div id="palette">&nbsp;</div>
           </div>
