Add sketch mode

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
       <span id="design-details">
         <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
         |
+        <button id="new-design">New Design</button>
+        <button id="sketch-design">Sketch</button>
         <span>
           Design name:
           <input id="design-name" type="text"></input>
@@ -198,7 +200,7 @@
           <div id="outline">outline</div>
           <div id="attribute-panel"> 
             <table>
-                <tr><td>Target Route</td><td><input type="text" id="target-route"></input></td></tr>
+                <tr><td>Target Route</td><td><select id="target-route"></select></td></tr>
               </table>
             <textarea id="attributes" wrap="soft">attributes</textarea>
           </div>
