--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
   <script src="./node_modules/@vaadin/vaadin-lumo-styles/typography.js" type="module"></script>
   
   <style>
-  body {
+  html {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+  }
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
     background-color: #223;
     color: white;
     overflow: hidden;
@@ -86,7 +92,8 @@
     display: none;
     position: absolute;
     border: 1px solid red;
-    z-index: 10000;
+    z-index: 20000;
+    /*pointer-events: none;*/
   }
 
   #select-marker-outline, #select-marker-paper {
@@ -137,77 +144,82 @@
     height: 2rem;
   }
 
+  #delete-design {
+    background-color: salmon;
+  }
+
   </style>
 </head>
-  <body>
-      <div id="marker"></div>
-      <div id="select-marker-outline"></div>
-      <div id="select-marker-paper"></div>
-      <div id="element-preview"></div>
-      <span id="design-details">
-        <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
-        |
-        <button id="new-design">New Design</button>
-        <button id="sketch-design">Sketch</button>
-        <span>
-          Design name:
-          <input id="design-name" type="text"></input>
-          <button id="save-design">Save Design</button>
-        </span>
-        <span>
-          Load:
-          <select id="choose-design">
-          </select>
-        </span>
-        <span>
-          Export:
-          <select id="choose-export-format">
-            <option disabled>Choose export format</option>
-            <option>Flow</option>
-            <option>LitElement</option>
-            <option>VanillaJS</option>
-            <option disabled>--------</option>            
-            <option>Angular</option>
-            <option>Preact</option>
-            <option>React</option>
-            <option>Svelte</option>
-            <option disabled>Vaadin on Kotlin</option>
-            <option>Vue</option>
-            <option disabled>--------</option>            
-            <option>Raw</option>
-          </select>
-          <button id="export-design">Export</button>
-        </span>
-        <span>
-          Import:
-          <input type="file" id="import-file-input"></input>
-          <button id="import-file">Import Raw</button>
-        </span>
-      </span>
-      <div id="container">
-        <div id="editor-panel">
-          <div id="text-editor"></div>
-          <div>
-            <input id="css-rule-filter" type="text"></input>
-            <div id="css-rules"></div>
-          </div>
-        </div>
-        <div id="paper" theme="dark">paper</div>
-        <div>
-            <div id="palette">&nbsp;</div>
-          </div>
-          <div>
-          <div id="outline">outline</div>
-          <div id="attribute-panel"> 
-            <table>
-                <tr><td>Target Route</td><td><select id="target-route"></select></td></tr>
-              </table>
-            <textarea id="attributes" wrap="soft">attributes</textarea>
-          </div>
+<body>
+  <div id="marker"></div>
+  <div id="select-marker-outline"></div>
+  <div id="select-marker-paper"></div>
+  <div id="element-preview"></div>
+  <span id="design-details">
+    <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
+    |
+    <button id="new-design">New Design</button>
+    <button id="sketch-design">Sketch</button>
+    <span>
+      Design name:
+      <input id="design-name" type="text"></input>
+      <button id="save-design">Save Design</button>
+    </span>
+    <span>
+      Load:
+      <select id="choose-design"></select>
+    </span>
+    <span>
+      Export:
+      <select id="choose-export-format">
+        <option disabled>Choose export format</option>
+        <option>Flow</option>
+        <option>LitElement</option>
+        <option>VanillaJS</option>
+        <option disabled>--------</option>            
+        <option>Angular</option>
+        <option>Preact</option>
+        <option>React</option>
+        <option>Svelte</option>
+        <option disabled>Vaadin on Kotlin</option>
+        <option>Vue</option>
+        <option disabled>--------</option>            
+        <option>Raw</option>
+      </select>
+      <button id="export-design">Export</button>
+    </span>
+    <span>
+      Import:
+      <input type="file" id="import-file-input"></input>
+      <button id="import-file">Import Raw</button>
+    </span>
+    <button id="delete-design">Delete design</button>
+  </span>
+  <div id="container">
+    <div id="editor-panel">
+      <div id="text-editor"></div>
+      <div>
+        <input id="css-rule-filter" type="text"></input>
+        <div id="css-rules"></div>
       </div>
-      <script type="module">
-          import initDesigner from "./src/unide.js";
-          initDesigner();
-      </script>
+    </div>
+    <div id="paper" theme="dark">paper</div>
+    <div>
+        <div id="palette">&nbsp;</div>
+    </div>
+    <div>
+      <div id="outline">outline</div>
+      <div id="attribute-panel"> 
+        <table>
+            <tr><td>Target Route</td><td><select id="target-route"></select></td></tr>
+          </table>
+        <textarea id="attributes" wrap="soft">attributes</textarea>
+      </div>
+    </div>
+  </div>
+    <script type="module">
+        import initDesigner from "./src/unide.js";
+        initDesigner();
+    </script>
   </body>
 </html>
