Remove all exports no longer worked on

--- a/index.html
+++ b/index.html
@@ -173,17 +173,7 @@
       Export:
       <select id="choose-export-format">
         <option disabled>Choose export format</option>
-        <option>Flow</option>
-        <option>LitElement</option>
-        <option>VanillaJS</option>
-        <option disabled>--------</option>            
-        <option>Angular</option>
-        <option>Preact</option>
-        <option>React</option>
-        <option>Svelte</option>
-        <option disabled>Vaadin on Kotlin</option>
-        <option>Vue</option>
-        <option disabled>--------</option>            
+        <option>Java</option>
         <option>Raw</option>
       </select>
       <button id="export-design">Export</button>
