--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     height: 50%;
     width: 15vw;
     border-top: 1px solid gray;
+    overflow: auto;
   }
 
   #outline div {
@@ -78,6 +79,7 @@
     border-top: 1px solid gray;
     height: 50%;
   }
+  
   #attributes {
     width: 100%;
     height: 50%;
@@ -150,7 +152,7 @@
 
   </style>
 </head>
-<body>
+<body theme="dark">
   <div id="marker"></div>
   <div id="select-marker-outline"></div>
   <div id="select-marker-paper"></div>
@@ -158,8 +160,8 @@
   <span id="design-details">
     <a href="https://vaadin.com" style="color:white">Learn more about Vaadin</a>
     |
-    <button id="new-design">New Design</button>
-    <button id="sketch-design">Sketch</button>
+    <button id="new-design" theme="primary"> New Design</button>
+    <button id="sketch-design" theme="primary">Sketch</button>
     <span>
       Design name:
       <input id="design-name" type="text"></input>
@@ -185,7 +187,7 @@
     </span>
     <button id="delete-design">Delete design</button>
   </span>
-  <div id="container">
+  <vaadin-split-panel id="container">
     <div id="editor-panel">
       <div id="text-editor"></div>
       <div>
@@ -193,7 +195,7 @@
         <div id="css-rules"></div>
       </div>
     </div>
-    <div id="paper" theme="dark">paper</div>
+    <div id="paper">paper</div>
     <div>
         <div id="palette">&nbsp;</div>
     </div>
@@ -206,7 +208,7 @@
         <textarea id="attributes" wrap="soft">attributes</textarea>
       </div>
     </div>
-  </div>
+  </vaadin-split-panel>
     <script type="module">
         import initDesigner from "./src/unide.js";
         initDesigner();
