--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
     overflow: hidden;
     background-color: white;
     color:black;
-
   }
 
-  #palette {
-   /* width: 100%; */
+  #palette-wrapper {
     height: 100%;
     overflow-y: auto;
+  }
+  #palette {
+    height: 100%;
+    overflow-y: visible;
     padding: 1em;
     border-right: 1px solid gray;
     border-top: 1px solid gray;
@@ -95,7 +97,6 @@
     position: absolute;
     border: 1px solid red;
     z-index: 20000;
-    /*pointer-events: none;*/
   }
 
   #select-marker-outline, #select-marker-paper {
@@ -105,7 +106,6 @@
     z-index: 10000;
     pointer-events: none;
   }
-
 
   #element-preview {
     display: none;
@@ -117,13 +117,10 @@
   }
 
   .palette-section {
-      height: 3em;
-      overflow: hidden;
       color: #aaa;
       transition: all 300ms ease-in-out; 
   }
   .palette-section:hover {
-/*      height: 20em;*/
       color: white;
   }
 
@@ -196,7 +193,7 @@
       </div>
     </div>
     <div id="paper">paper</div>
-    <div>
+    <div id="palette-wrapper">
         <div id="palette">&nbsp;</div>
     </div>
     <div>
