Add simple sharing of designs

--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
   <div id="select-marker-outline"></div>
   <div id="select-marker-paper"></div>
   <div id="element-preview"></div>
+
+  <!-- Header fields and buttons-->
   <span id="design-details">
     <button id="new-design" theme="primary">New</button>
     <button id="sketch-design" theme="primary">Sketch</button>
@@ -182,8 +184,11 @@
       <input type="file" id="import-file-input"></input>
       <button id="import-file">Import Raw</button>
     </span>
+    <button id="share-designs">Share</button>
     <button id="delete-design">Delete design</button>
   </span>
+
+  <!-- Designer UI panels-->
   <vaadin-split-panel id="container">
     <div id="editor-panel">
       <div id="text-editor"></div>
