--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>UniDe - Universal Desiger</title>
+  <title>Unide</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="images/unide.png" sizes="256x256">
 
