Fix css import using rollup plugin

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Unide</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="images/unide.png" sizes="256x256">
+  <link rel="stylesheet" href="./bundle.css">
 
   <!--
   <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
@@ -15,7 +16,6 @@
   <script src="../node_modules/prettier/parser-babylon.js"></script>
   <script src="../node_modules/jszip/dist/jszip.js"></script>
   <script src="../node_modules/file-saver/dist/FileSaver.js"></script>
-  <script src="../node_modules/codemirror/lib/codemirror.js"></script>
   <script src="../node_modules/codemirror/mode/css/css.js"></script>
   <script src="../node_modules/codemirror/addon/hint/show-hint.js"></script>
   <script src="../node_modules/codemirror/addon/hint/css-hint.js"></script>
