Final step of rollup port

--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,10 @@
   <link rel="stylesheet" href="./bundle.css">
 
   <!--
-  <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
-  <link rel="stylesheet" href="./node_modules/codemirror/theme/tomorrow-night-eighties.css">
   <script src="../node_modules/prettier/standalone.js"></script>
   <script src="../node_modules/prettier/parser-babylon.js"></script>
   <script src="../node_modules/jszip/dist/jszip.js"></script>
   <script src="../node_modules/file-saver/dist/FileSaver.js"></script>
-  <script src="../node_modules/codemirror/mode/css/css.js"></script>
-  <script src="../node_modules/codemirror/addon/hint/show-hint.js"></script>
-  <script src="../node_modules/codemirror/addon/hint/css-hint.js"></script>
-
-  <script src="../node_modules/@vaadin/vaadin-lumo-styles/color.js" type="module"></script>
-  <script src="../node_modules/@vaadin/vaadin-lumo-styles/sizing.js" type="module"></script>
-  <script src="../node_modules/@vaadin/vaadin-lumo-styles/spacing.js" type="module"></script>
-  <script src="../node_modules/@vaadin/vaadin-lumo-styles/style.js" type="module"></script>
-  <script src="../node_modules/@vaadin/vaadin-lumo-styles/typography.js" type="module"></script>
-
 -->
   
   <style>
@@ -232,6 +220,7 @@
       </div>
     </div>
   </div>
+  <script src="lib/jszip.min.js"></script>
   <script src="./bundle.js"></script>
 
   </body>
