Implement aux class

--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
     </style>
     <div class="settings-page">
       <span>
-        Target folder
+        Target package
         <input id="target-folder" type="text"></input>
         <!-- Button only visible on Electron -->
         <button  id="select-folder" hidden>Select</button>      
