Update to Vaadin 14.0.7, show version in UI

--- a/public/index.html
+++ b/public/index.html
@@ -209,8 +209,9 @@
 
   <!-- Header fields and buttons-->
   <div id="design-details">
+    <span>Unide 0.1.0</span>
     <button id="project-settings">Settings</button>
-    <button id="new-design">New</button>
+    <button id="new-design">New Design</button>
     <button id="sketch-design">Sketch</button>
     <span>
       Name:
@@ -236,6 +237,7 @@
     </span>
     <button id="share-designs">Share</button>
     <button id="delete-design">Delete design</button>
+
   </div>
 
   <!-- Designer UI panels-->
