--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,28 @@
   }
 
   #paper {
-    /*box-sizing: border-box;*/
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: white;
     color:black;
+  }
+
+  #visual-editor {
+    min-height: 50%;
+    overflow: auto;
+    flex-grow: 1;
+    flex-shrink: 0;
+  }
+
+  #xml-editor {
+    display: none;
+    height: 50%;
+    flex-grow: 1;
+    flex-shrink: 0;
   }
 
   #palette-wrapper {
@@ -231,6 +247,7 @@
     <button id="project-settings">Settings</button>
     <button id="new-design">New Design</button>
     <button id="sketch-design">Sketch</button>
+    <button id="html-mode">XML</button>
     <span>
       Name:
       <input id="design-name" type="text"></input>
@@ -258,7 +275,15 @@
       <input id="css-rule-filter" type="text"></input>
       <div id="css-rules"></div>
     </div>
-    <div id="paper">paper</div>
+    <div id="paper">
+        <div id="visual-editor">
+          
+        </div>
+        <div id="xml-editor">
+          
+        </div>
+  
+    </div>
     <div id="palette-wrapper">
         <div id="palette">&nbsp;</div>
     </div>
