Implement vaadin TypeScript exporter

--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,8 @@
         <span>
           Project format
           <select id="choose-export-format">
-            <option>Java</option>
+            <option>Vaadin Java</option>
+            <option>Vaadin TypeScript</option>
             <option>LitElement</option>
             <option>VanillaJS</option>
             <option disabled>--------</option>            
@@ -299,6 +300,7 @@
     </div>
   </div>
   <script src="lib/jszip.min.js"></script>
+  <script src="lib/jszip-utils.min.js"></script>
 
   <script src="./bundle.js"></script>
 
