Use iframe to contain paper and related elements

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,11 @@
     flex-shrink: 0;
   }
 
+  #visual-editor-frame {
+    width: 100%;
+    height: 100%;
+  }
+
   #xml-editor {
     display: none;
     height: 50%;
@@ -278,7 +283,7 @@
     </div>
     <div id="paper">
         <div id="visual-editor">
-          
+          <iframe id="visual-editor-frame" src="iframe.html"></iframe>
         </div>
         <div id="xml-editor">
           
