Use UCP for Vaadin Components and MUI

--- a/public/iframe_mui.html
+++ b/public/iframe_mui.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <script src="iframe_bundle.js"></script>
+    <style>
+      body,
+      html {
+        height: 100%;
+      }
+    </style>
+    <script src="iframe_bundle_mui.js"></script>
   </head>
   <body></body>
 </html>
