--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     width: 100vw;
     height: 100vh;
     margin: 0px;
-    background-color: #223;
+    background-color: #222;
     color: white;
     overflow: hidden;
   }
@@ -75,7 +75,7 @@
 
   #outline {
     width: 100%;
-    height: 50%;
+    height: 100%;
     width: 15vw;
     border-top: 1px solid gray;
     overflow: auto;
@@ -101,22 +101,22 @@
     height: 100%;
     border: none;
     width: 15vw;
-    background-color: #223;
+    background-color: #222;
     color: white;
     border-top: 1px solid gray;
     overflow: auto;
   }
 
-  #attributes td {
-    border: 1px solid gray;  
+  #inspector td {
+    /*border: 1px solid gray;  */
     word-wrap: break-word;
     width: 50%;
     max-width:50%;
   }
 
-  #attributes > table {
-    max-width: 100%;
-    width: 100%;
+  #inspector > table {
+    max-width: 50%;
+    /*width: 100%; */
     table-layout: fixed;
     border-collapse: collapse;
   }
@@ -137,13 +137,34 @@
     pointer-events: none;
   }
 
-  #element-preview {
+  #element-preview, 
+  #inspector {
+    border-radius: 10px;
     display: none;
     position: absolute;
-    background-color: #aad;
-    border: 1px solid black;
+    border: 1px solid gray;
     z-index: 10000;
-    padding: 1em;
+    padding: 10px;
+    background-color: #222;
+    color: white;
+    z-index: 30000;
+  }
+
+  #inspector-target {
+    width: 400px;
+    height: 200px;
+    margin: 10px;
+    background-color: white;
+    color: black;
+  }
+
+  #inspector:hover {
+    opacity: 1;
+  }
+
+  #inspector {
+    opacity: 0.0;
+    transition: all 200ms ease-in-out; 
   }
 
   .palette-section {
@@ -182,10 +203,20 @@
 </head>
 <body>
   <!-- Various markes and overlays -->
+  <div id="element-preview"></div>
+  <div id="inspector">
+    <div id="inspector-target">
+
+    </div>
+    <select id="editor-select">
+    </select>
+    <div id="editor-content"> 
+
+    </div>
+  </div>
   <div id="marker"></div>
   <div id="select-marker-outline"></div>
   <div id="select-marker-paper"></div>
-  <div id="element-preview"></div>
 
   <!-- Settings page template -->
   <template id="settings-template">
@@ -290,13 +321,13 @@
     </div>
     <div id="outline-attributes">
       <div id="outline">outline</div>
-      <div id="attribute-panel"> 
+      <!-- <div id="attribute-panel"> 
         <table>
           <tr><td>Route</td><td><select id="target-route"></select></td></tr>
           <tr><td>Field</td><td><input id="field-name" type="text"></input></td></tr>
         </table>
         <div id="attributes"></div>
-      </div>
+      </div> -->
     </div>
   </div>
   <script src="lib/jszip.min.js"></script>
