--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     width: 100vw;
     height: 100vh;
     margin: 0px;
-    background-color: #223;
+    background-color: #222;
     color: white;
     overflow: hidden;
   }
@@ -90,6 +90,18 @@
     margin-left: 1em;
   }
 
+  #outline input {
+    display: block;
+    margin-left: 1em;
+    background-color: #222;
+    border: none;
+    color: white;
+  }
+
+  #outline input:focus {
+    outline: none;
+  }
+
   #attribute-panel {
     border-top: 1px solid gray;
     height: 50%;
@@ -101,7 +113,7 @@
     height: 100%;
     border: none;
     width: 15vw;
-    background-color: #223;
+    background-color: #222;
     color: white;
     border-top: 1px solid gray;
     overflow: auto;
@@ -177,6 +189,7 @@
   #delete-design {
     background-color: salmon;
   }
+
 
   </style>
 </head>
