No longer focus text field in outline when selecting element, text improvements

--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
         display: flex;
         justify-content: space-between;
       }
-      #target-folder {
+      #target-folder, #app-layout-class {
         width: 40rem;
       }
 
@@ -237,11 +237,11 @@
         </div>
         <hr>
         <div>
-          <span>Use Applayout</span>
+          <span>Use App Layout</span>
           <input id="use-app-layout" type="checkbox"></input>
         </div>
         <div>
-          <span>AppLayout class</span>
+          <span>App Layout class</span>
           <input id="app-layout-class" type="text"></input>
         </div>
       </div>
