add selection for Vaadin version

--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,14 @@
       Load:
       <select id="choose-design"></select>
     </span>
-    <button id="export-design">Export</button>
+    <span>
+      <span>Vaadin Version</span>
+      <select id="vaadin-version">
+          <option>Vaadin 10+</option>
+          <option>Vaadin 8</option>
+      </select>
+      <button id="export-design">Export</button>
+    </span>
     <span>
       Import:
       <input type="file" id="import-file-input"></input>
